RESOLVED FIXED131189
REGRESSION: PCE.js is 20x slower in WebKit2 because timers are throttled
https://bugs.webkit.org/show_bug.cgi?id=131189
Summary REGRESSION: PCE.js is 20x slower in WebKit2 because timers are throttled
Michael Saboff
Reported 2014-04-03 16:10:32 PDT
The WebContent processes on iOS is throttled when not updating the screen.
Attachments
Patch (1.82 KB, patch)
2014-04-03 16:23 PDT, Michael Saboff
ggaren: review+
Michael Saboff
Comment 1 2014-04-03 16:10:46 PDT
Michael Saboff
Comment 2 2014-04-03 16:23:39 PDT
Geoffrey Garen
Comment 3 2014-04-03 16:39:36 PDT
Comment on attachment 228555 [details] Patch r=me
Michael Saboff
Comment 4 2014-04-03 16:56:30 PDT
Gavin Barraclough
Comment 5 2014-04-16 14:35:24 PDT
Rolled out in r167386; this workaround is no longer necessary.
Note You need to log in before you can comment on or make changes to this bug.