REGRESSION: PCE.js is 20x slower in WebKit2 because timers are throttled https://bugs.webkit.org/show_bug.cgi?id=131189

Unreviewed rollout of r166754

This change is no longer necessary.

* UIProcess/Launcher/mac/ProcessLauncherMac.mm:
(WebKit::connectToService):



Canonical link: https://commits.webkit.org/149820@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167386 268f45cc-cd09-0410-ab3c-d52691b4dbfc